	PR middle-end/46360 	* tree-ssa-propagate.c (update_call_from_tree): Fix for use 	not in SSA mode.

* gcc.c-torture/compile/pr46360.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166482 138bc75d-0d04-0410-961f-82ee72b054a4